--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,146 +1,134 @@
 name: Docker
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 on:
   schedule:
-    - cron: "27 0 * * *"
+  - cron: 27 0 * * *
   push:
-    branches: ["main", "next"]
-    # Publish semver tags as releases.
-    tags: ["v*.*.*"]
+    branches:
+    - main
+    - next
+    tags:
+    - v*.*.*
   pull_request:
-    branches: ["main", "next"]
+    branches:
+    - main
+    - next
   workflow_dispatch:
     inputs:
       ref:
-        description: "Git ref to build (branch, tag, or SHA). Leave empty for default branch."
+        description: Git ref to build (branch, tag, or SHA). Leave empty for default
+          branch.
         required: false
         type: string
-        default: ""
+        default: ''
       tag:
-        description: "Custom image tag (e.g., 'test-oauth', 'pr-1836'). Required for manual runs."
+        description: Custom image tag (e.g., 'test-oauth', 'pr-1836'). Required for
+          manual runs.
         required: false
         type: string
-        default: ""
+        default: ''
       push:
-        description: "Push to registry"
+        description: Push to registry
         required: false
         type: boolean
         default: true
-
 env:
-  # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   build:
-    runs-on: ubuntu-latest-xl
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
       id-token: write
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-        with:
-          ref: ${{ inputs.ref || github.ref }}
+    - name: Checkout repository
+      uses: actions/checkout@v6
+      with:
+        ref: ${{ inputs.ref || github.ref }}
+    - name: Install cosign
+      if: github.event_name != 'pull_request'
+      uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad
+      with:
+        cosign-release: v2.2.4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f
+    - name: Log into registry ${{ env.REGISTRY }}
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Extract Docker metadata
+      id: meta
+      uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: 'type=schedule
 
-      # Install the cosign tool except on PR
-      # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad #v4.0.0
-        with:
-          cosign-release: "v2.2.4"
+          type=ref,event=branch
 
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
+          type=ref,event=tag,enable=${{ github.event_name != ''workflow_dispatch''
+          }}
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          type=ref,event=pr
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5.10.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=tag,enable=${{ github.event_name != 'workflow_dispatch' }}
-            type=ref,event=pr
-            type=semver,pattern={{version}},enable=${{ github.event_name != 'workflow_dispatch' }}
-            type=semver,pattern={{major}}.{{minor}},enable=${{ github.event_name != 'workflow_dispatch' }}
-            type=semver,pattern={{major}},enable=${{ github.event_name != 'workflow_dispatch' }}
-            type=sha
-            type=edge,enable=${{ github.event_name != 'workflow_dispatch' }}
-            # Custom tag for manual workflow dispatch
-            type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '' }}
-            # Custom rule to prevent pre-releases from getting latest tag
-            type=raw,value=latest,enable=${{ github.event_name != 'workflow_dispatch' && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
+          type=semver,pattern={{version}},enable=${{ github.event_name != ''workflow_dispatch''
+          }}
 
-      - name: Go Build Cache for Docker
-        uses: actions/cache@v5
-        with:
-          path: go-build-cache
-          key: ${{ runner.os }}-go-build-cache-${{ hashFiles('**/go.sum') }}
+          type=semver,pattern={{major}}.{{minor}},enable=${{ github.event_name !=
+          ''workflow_dispatch'' }}
 
-      - name: Inject go-build-cache
-        uses: reproducible-containers/buildkit-cache-dance@4b2444fec0c0fb9dbf175a96c094720a692ef810 # v2.1.4
-        with:
-          cache-source: go-build-cache
+          type=semver,pattern={{major}},enable=${{ github.event_name != ''workflow_dispatch''
+          }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch' || inputs.push) }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            VERSION=${{ inputs.ref || github.ref_name }}
-            OAUTH_CLIENT_ID=${{ secrets.OAUTH_CLIENT_ID }}
-            OAUTH_CLIENT_SECRET=${{ secrets.OAUTH_CLIENT_SECRET }}
+          type=sha
 
-      # Sign the resulting Docker image digest except on PRs.
-      # This will only write to the public Rekor transparency log when the Docker
-      # repository is public to avoid leaking data.  If you would like to publish
-      # transparency data even for private images, pass --force to cosign below.
-      # https://github.com/sigstore/cosign
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
-          TAGS: ${{ steps.meta.outputs.tags }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
-        
+          type=edge,enable=${{ github.event_name != ''workflow_dispatch'' }}
+
+          # Custom tag for manual workflow dispatch
+
+          type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '''' }}
+
+          # Custom rule to prevent pre-releases from getting latest tag
+
+          type=raw,value=latest,enable=${{ github.event_name != ''workflow_dispatch''
+          && github.ref_type == ''tag'' && startsWith(github.ref, ''refs/tags/v'')
+          && !contains(github.ref, ''-'') }}
+
+          '
+    - name: Go Build Cache for Docker
+      uses: actions/cache@v5
+      with:
+        path: go-build-cache
+        key: ${{ runner.os }}-go-build-cache-${{ hashFiles('**/go.sum') }}
+    - name: Inject go-build-cache
+      uses: reproducible-containers/buildkit-cache-dance@4b2444fec0c0fb9dbf175a96c094720a692ef810
+      with:
+        cache-source: go-build-cache
+    - name: Build and push Docker image
+      id: build-and-push
+      uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' && (github.event_name != 'workflow_dispatch'
+          || inputs.push) }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64,linux/arm64
+        build-args: 'VERSION=${{ inputs.ref || github.ref_name }}
+
+          OAUTH_CLIENT_ID=${{ secrets.OAUTH_CLIENT_ID }}
+
+          OAUTH_CLIENT_SECRET=${{ secrets.OAUTH_CLIENT_SECRET }}
+
+          '
+    - name: Sign the published Docker image
+      if: ${{ github.event_name != 'pull_request' }}
+      env:
+        TAGS: ${{ steps.meta.outputs.tags }}
+        DIGEST: ${{ steps.build-and-push.outputs.digest }}
+      run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
